Fix note upload icons display in dark mode

--- a/src/pages/NewNote/NewNote.css
+++ b/src/pages/NewNote/NewNote.css
@@ -50,7 +50,6 @@
     justify-content: center;
     width: 100%;
     padding: 1rem 0 1rem;
-    color: #035172;
     border-top: 1px solid #ccc;
     border-bottom: 1px solid #ccc;
   }
